smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/mixins/with-but-no-ids.smithy
// Parse error at line 5, column 20 near `{}`: Expected a valid identifier character, but found '{'
$version: "2"
namespace com.foo

structure Foo with {}
